...
  }

  return (
    <>
      {today.length > 0 ? (
        <ListSection
          title="Today"
          items={today}
          onMatchPress={onMatchPress}
        />
      ) : null}

      {upcoming.length > 0 ? (
...
