appId: host.exp.Exponent
---
- launchApp: "host.exp.Exponent"

- tapOn: GameOn

- runFlow: "teams/create-team-flow.yaml"

- tapOn: Messages

- assertVisible: Messages
- assertVisible: All
- assertVisible: Direct
- assertVisible: Groups
- assertVisible: add


- tapOn: add
- assertVisible: New Message
- assertVisible: New Group

- tapOn: New Message

- tapOn: message
- assertVisible: Message
- doubleTapOn: Message
- doubleTapOn: Message

- inputText: Hello world!
- tapOn: Up

- assertVisible: Today
- assertVisible: Hello world!

- tapOn: Messages

- assertVisible: person.fill, hannah montana, now, Forward, Hello world!

- tapOn: Direct
- assertVisible: person.fill, hannah montana, now, Forward, Hello world!

- tapOn: Groups
- assertVisible: No messages available

- tapOn: add
- tapOn: New Group

- tapOn: Enter group name
- inputText: TestChat



