appId: host.exp.Exponent
---

- tapOn: Spaces

- tapOn: Leagues

- tapOn: add
- tapOn: Create a League

- tapOn: Enter league Name

- inputText: End2EndLeague

- doubleTapOn: Select sport, 

- tapOn: Soccer

- assertVisible: Soccer, 

- tapOn: Select level, 

- tapOn: Amateur

- assertVisible: Canada

- tapOn: Select city, 

- tapOn: Montreal

- tapOn: Create

- assertVisible: League Created

- assertVisible: End2EndLeague, Canada, Forward
